; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_iba7322.c_try_7322_autoneg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_iba7322.c_try_7322_autoneg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_pportdata = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@QIBL_IB_AUTONEG_INPROG = common dso_local global i32 0, align 4
@QIB_IB_DDR = common dso_local global i32 0, align 4
@ib_wq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qib_pportdata*)* @try_7322_autoneg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @try_7322_autoneg(%struct.qib_pportdata* %0) #0 {
  %2 = alloca %struct.qib_pportdata*, align 8
  %3 = alloca i64, align 8
  store %struct.qib_pportdata* %0, %struct.qib_pportdata** %2, align 8
  %4 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %5 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %4, i32 0, i32 1
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load i32, i32* @QIBL_IB_AUTONEG_INPROG, align 4
  %9 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %10 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  %13 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %14 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %13, i32 0, i32 1
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @spin_unlock_irqrestore(i32* %14, i64 %15)
  %17 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %18 = call i32 @qib_autoneg_7322_send(%struct.qib_pportdata* %17, i32 0)
  %19 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %20 = load i32, i32* @QIB_IB_DDR, align 4
  %21 = call i32 @set_7322_ibspeed_fast(%struct.qib_pportdata* %19, i32 %20)
  %22 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %23 = call i32 @qib_7322_mini_pcs_reset(%struct.qib_pportdata* %22)
  %24 = load i32, i32* @ib_wq, align 4
  %25 = load %struct.qib_pportdata*, %struct.qib_pportdata** %2, align 8
  %26 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = call i32 @msecs_to_jiffies(i32 2)
  %30 = call i32 @queue_delayed_work(i32 %24, i32* %28, i32 %29)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @qib_autoneg_7322_send(%struct.qib_pportdata*, i32) #1

declare dso_local i32 @set_7322_ibspeed_fast(%struct.qib_pportdata*, i32) #1

declare dso_local i32 @qib_7322_mini_pcs_reset(%struct.qib_pportdata*) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
